# Kernel

./: .gitignore  CMakeLists.txt  README.md
cmake/: load_arch.cmake
src/include/: multiboot2.h
src/kernel/: CMakeLists.txt  framebuffer.c  kmalloc.c  main.c  panic.c  printk.c  sched.c  syscall.c  tty.c
src/kernel/arch/x86/: GDT.S  GDT.c  PIT.S  PIT.c  boot.S  flags.cmake  interrupt.S  interrupts.c  layout.ld  paging.c  task.S  tss.S
src/kernel/arch/x86/include/: GDT.h  PIT.h  interrupts.h  paging.h
src/kernel/drivers/ps2/: keyboard.c
src/kernel/fs/: vfs.c
src/kernel/include/: elf.h  font.h  framebuffer.h  kmalloc.h  panic.h  sched.h  syscall.h  tty.h
src/kernel/include/drivers/ps2/: keyboard.h
src/kernel/include/fs/: vfs.h
src/kernel/include/mm/: page.h  phys.h
src/kernel/include/syscalls/: sys_write.h
src/kernel/include/threading/: thread.h
src/kernel/mm/: phys.c
src/kernel/syscalls/: sys_write.c
src/kernel/threading/: thread.c
src/libk/: CMakeLists.txt
src/libk/include/: errno.h  stddef.h  stdio.h  stdlib.h  string.h
src/libk/include/sys/: io.h  stat.h
src/libk/stdio/: vsnprintf.c
src/libk/stdlib/: atoi.c  itoa.c  strtol.c  utoa.c
